# TieTheKnot

./: README.md
Meetings/: 2022_10_14.docx  Project.pptx
Software/: CMakeLists.txt
Software/dep/align_activity/: CMakeLists.txt
Software/dep/align_activity/src/: align_activity.cpp
Software/dep/arm_activity/: CMakeLists.txt
Software/dep/arm_activity/include/: iiwa_activity.hpp  iiwa_client.hpp  iiwa_controller.hpp  iiwa_interface.hpp
Software/dep/arm_activity/src/: Table_perception.cpp  Table_perception2.cpp  iiwa_activity.cpp  iiwa_client.cpp  iiwa_controller.cpp  iiwa_demo.cpp  iiwa_interface.cpp
Software/dep/perception_activity/: CMakeLists.txt
Software/dep/perception_activity/include/: perception_activity.hpp
Software/dep/perception_activity/src/: perception_activity.cpp
Software/dep/petrinet_activity/: CMakeLists.txt
Software/dep/petrinet_activity/include/: petrinet_activity.hpp
Software/dep/petrinet_activity/src/: petrinet_activity.cpp
Software/dep/vision_activity/: CMakeLists.txt
Software/dep/vision_activity/include/: vision_activity.hpp
Software/dep/vision_activity/src/: vision_activity.cpp
Software/src/: Detection.cpp  TieTheKnot_Petrinet.cpp  demo.cpp
Software/test/IBVS/: CMakeLists.txt  ImageBasedVisualServoing.cpp
Software/test/basicTest/: DisplayImage.cpp  detectColors.cpp  test.py
Software/test/gripperTracker/: CMakeLists.txt  gripperTracker.cpp
Software/test/gripperTracker/include/: detection.hpp
Software/test/objectDetection/: CMakeLists.txt  ColorDetection.cpp  Detection.cpp  GrabCut.cpp  objectDetection.cpp  rope.cpp  ropeDetection.cpp  ropeSegmentationDummyCode.cpp
Software/test/objectDetection/include/: detection.hpp
Software/test/ropeSegmentation/: CMakeLists.txt  ropeSegmentation.cpp
Software/test/ropeSegmentation/include/: ropeSegmentation.hpp
